syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

package system;

// 表示生成的go文件的存放地址，会自动生成目录。
option go_package = "./system";

// 定义系统服务
service System {
  // 获取系统信息接口
  rpc GetSystemInfo (GetSystemInfoRequest) returns (GetSystemInfoResponse) {}
}

// 获取系统信息接口请求参数
message GetSystemInfoRequest {}

// 获取系统信息接口返回值
message GetSystemInfoResponse {
  double cpuPercent = 1;        // CPU使用率
  double memPercent = 2;        // 内存使用率
  double diskPercent = 3;       // 磁盘使用率
  string cpuGHz = 4;            // CPU主频
  int32 cpuCounts = 5;          // CPU核数
  string memTotal = 6;          // 总内存
  string memUsed = 7;           // 剩余内存
  string diskTotal = 8;         // 磁盘总大小
  string diskUsed = 9;          // 磁盘剩余大小
}